# pico-keys-sdk

./: CMakeLists.txt  pico_keys_sdk_import.cmake  sdkconfig
config/esp32/components/pico-keys-sdk/: idf_component.yml
main/: CMakeLists.txt  app_main.c  idf_component.yml
main/io/: cardputer_io.cpp
main/led/: led.c  led_neopixel.cpp
main/usb/: tusb_config.h
main/usb/ccid/: ccid.c
src/: main.c
src/io/: cardputer_io.cpp  cardputer_io.h
